--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="edjectiveApp">
+<html data-ng-app="edjectiveApp">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,29 +12,29 @@
 </head>
 <body>
 
-  <div ng-controller="GetTeacherEmailCtrl" class="emailInput">
-    Teacher e-mail address: <input type="text" ng-model="teacherEmail" />
-    <button ng-click="update(teacherEmail)">Update</button>
+  <div data-ng-controller="GetTeacherEmailCtrl" class="emailInput">
+    Teacher e-mail address: <input type="text" data-ng-model="teacherEmail" />
+    <button data-ng-click="update(teacherEmail)">Lookup</button>
   </div>
 
   <br />
 
-  <div ng-controller="LookupCtrl">
+  <div data-ng-controller="LookupCtrl">
     <div class="classDisplay">
       <p>{{notice.text}}</p>
       <ul>
-        <li ng-repeat="class in classes">
-          <input type="checkbox" ng-change="classSelection(class)" ng-model="class.isSelected">{{class.name}} ({{class.course_id}})
+        <li data-ng-repeat="class in classes">
+          <input type="checkbox" data-ng-change="classSelection(class)" data-ng-model="class.isSelected">{{class.name}} ({{class.course_id}})
         </li>
       </ul>
     </div>
 
     <div class="objectiveDisplay">
     <ul>
-      <li ng-repeat="class in objectives.data">
+      <li data-ng-repeat="class in objectives.data">
         {{class.text}}
         <ul>
-          <li ng-repeat="obj in class.objectives">
+          <li data-ng-repeat="obj in class.objectives">
             {{obj.date}} {{obj.objective}}
           </li>
         </ul>
