--- a/src/webapp/pages/forTeachers.html
+++ b/src/webapp/pages/forTeachers.html
@@ -1,3 +1,19 @@
-<p>forTeachers.html</p>
+<h2>Teachers, here are the big ideas for you:</h2>
 
-<a href="#/">Back to top...</a>
+<h3>Sharing of materials in a machine readable format, with simple terms</h3>
+
+<p>Sharing of materials is not new at all, but materials have to be consumed in some manner (word processor documents for handouts, flash card software, etc.), and typically the materials are tied to particular software (or maybe even none at all).</p>
+
+<h3>Variety of software that can consume the materials</h3>
+
+<p>This is mostly in the future, but here are the plans for some of the first software that can access the materials:</p>
+
+<ul>
+	<li>Access by parents to materials related directly to what you are working on that day</li>
+	<li>Worksheet/test generation for teachers</li>
+	<li>Flashcards and other activities for students</li>
+</ul>
+
+<h3>EASY enablement of all of this via identification of the relevant learning objectives</h3>
+
+...
