--- a/src/webapp/pages/front.html
+++ b/src/webapp/pages/front.html
@@ -1,6 +1,9 @@
-
-
-<ul>
-	<li><a href="#/forParents">For parents</a></li>
-	<li><a href="#/forTeachers">For teachers</a></li>
+<ul class="huge">
+	<li class="red"><a href="#/forTeachers">For teachers</a></li>
+	<li class="orange"><a href="#/forParents">For parents</a></li>
+	<li class="blue"><a href="#/forCurriculumDesigners">For curriculum designers</a></li>
+	<li class="yellow"><a href="#/forCreatorsOfMaterials">For creators of educational materials</a></li>
+	<li class="purple"><a href="#/forSoftwareVendors">For software vendors</a></li>
+	<li class="green"><a href="#/forEducationVendors">For education vendors</a></li>
+	<li class="pink"><a href="#/forNerds">For nerds</a></li>
 </ul>
