--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -13,6 +13,12 @@
 </head>
 <body>
 
+  <div class="navbar">
+    <ul>
+      <li><a href="#/">Front page</a></li>
+    </ul>
+  </div>
+
   <div data-ng-view=""></div>
 
   
