start a page on key ideas

--- a/src/webapp/pages/front.html
+++ b/src/webapp/pages/front.html
@@ -1,4 +1,5 @@
 <ul class="huge">
+        <li class="blue"><a href="#/keyIdeas">Key ideas</a></li>
 	<li class="red"><a href="#/forTeachers">For teachers</a></li>
 	<li class="orange"><a href="#/forParents">For parents</a></li>
 	<li class="blue"><a href="#/forCurriculumDesigners">For curriculum designers</a></li>
