--- a/src/webapp/pages/keyIdeas.html
+++ b/src/webapp/pages/keyIdeas.html
@@ -53,6 +53,9 @@ unlimited.  Consider a few examples:</p>
   <li>Crowd-sourced indexes of relevant resources</li>
 </ul>
 
-<p>Software for smartphones, tablets, web sites, computers, and specialty
-devices will make relevant educational materials ubiquitous.</p>
-
+<p>Software for smartphones, tablets, web sites, computers, game systems,
+and specialty devices will make relevant educational materials ubiquitous.
+Whether a child studied the Pythagorean theorem, the Napoleonic Wars,
+or the conjugation of common French verbs at school today, it should not
+take more than a few taps on her parent's smartphone or computer to access
+relevant materials and start a conversation about it.</p>
