fix foreground and background colors on front page menu bars

--- a/src/webapp/pages/front.html
+++ b/src/webapp/pages/front.html
@@ -1,10 +1,10 @@
 <ul class="huge">
-        <li class="blue"><a href="#/keyIdeas">Key ideas</a></li>
-	<li class="red"><a href="#/forTeachers">For teachers</a></li>
-	<li class="orange"><a href="#/forParents">For parents</a></li>
-	<li class="blue"><a href="#/forCurriculumDesigners">For curriculum designers</a></li>
-	<li class="yellow"><a href="#/forCreatorsOfMaterials">For creators of educational materials</a></li>
-	<li class="purple"><a href="#/forSoftwareVendors">For software vendors</a></li>
-	<li class="green"><a href="#/forEducationVendors">For education vendors</a></li>
-	<li class="pink"><a href="#/forNerds">For nerds</a></li>
+        <li class="keyideas"><a href="#/keyIdeas">Key ideas</a></li>
+	<li class="forteachers"><a href="#/forTeachers">For teachers</a></li>
+	<li class="forparents"><a href="#/forParents">For parents</a></li>
+	<li class="forcreators"><a href="#/forCurriculumDesigners">For curriculum designers</a></li>
+	<li class="forcreators"><a href="#/forCreatorsOfMaterials">For creators of educational materials</a></li>
+	<li class="forisvs"><a href="#/forSoftwareVendors">For software vendors</a></li>
+	<li class="forpublishers"><a href="#/forEducationVendors">For education vendors</a></li>
+	<li class="fornerds"><a href="#/forNerds">For nerds</a></li>
 </ul>
