small image as replacement for "Front page" link

--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -13,10 +13,8 @@
 </head>
 <body>
 
-  <div class="navbar">
-    <ul>
-      <li><a href="#/">Front page</a></li>
-    </ul>
+  <div id="folder-image">
+    <a href="#/"><img src="images/edjectives-folder-1-transparent-cropped-640px.png"></a>
   </div>
 
   <div data-ng-view=""></div>
