consolidate the two types of authors

--- a/src/webapp/pages/forAuthors.html
+++ b/src/webapp/pages/forAuthors.html
@@ -1,4 +1,4 @@
-<p>In short:</p>
+<p>Curriculum designers:</p>
 
 <ul>
   <li>The formal curriculum description moves closer to the forefront
@@ -11,4 +11,14 @@
   <em>involved</em> parties via the central use of the objectives.</li>
   <li>From the curriculum designers we need an outline of each course
   with different types of information around each objective.</li>
+</ul>
+
+
+<p>Creators of educational materials:</p>
+
+<ul>
+  <li>Educators who contribute material to the repository will be
+  able to reuse it in a variety of software.</li>
+  <li>The material must be freely available under common terms, 
+  similar to material in Wikipedia.</li>
 </ul>
