--- a/src/webapp/pages/front.html
+++ b/src/webapp/pages/front.html
@@ -2,8 +2,7 @@
         <li class="keyideas"><a href="#/keyIdeas">Key ideas</a></li>
 	<li class="forteachers"><a href="#/forTeachers">For teachers</a></li>
 	<li class="forparents"><a href="#/forParents">For parents</a></li>
-	<li class="forcreators"><a href="#/forCurriculumDesigners">For curriculum designers</a></li>
-	<li class="forcreators"><a href="#/forCreatorsOfMaterials">For creators of educational materials</a></li>
+	<li class="forauthors"><a href="#/forAuthors">For authors</a></li>
 	<li class="forisvs"><a href="#/forSoftwareVendors">For software vendors</a></li>
 	<li class="forpublishers"><a href="#/forEducationVendors">For education vendors</a></li>
 	<li class="fornerds"><a href="#/forNerds">For nerds</a></li>
