--- a/src/webapp/pages/front.html
+++ b/src/webapp/pages/front.html
@@ -3,7 +3,7 @@
 	<li class="forteachers"><a href="#/forTeachers">For teachers</a></li>
 	<li class="forparents"><a href="#/forParents">For parents</a></li>
 	<li class="forauthors"><a href="#/forAuthors">For authors</a></li>
-	<li class="forisvs"><a href="#/forSoftwareVendors">For software vendors</a></li>
-	<li class="forpublishers"><a href="#/forEducationVendors">For education vendors</a></li>
+	<li class="forvendors"><a href="#/forVendors">For education vendors</a></li>
+    <li class="qanda"><a href="#/QandA">Q &amp; A</a></li>
 	<li class="fornerds"><a href="#/forNerds">For nerds</a></li>
 </ul>
