--- a/src/webapp/pages/qanda.html
+++ b/src/webapp/pages/qanda.html
@@ -1,26 +1,153 @@
 <h2>Questions and Answers</h2>
 
+<h3>Who are you, and why are you doing this?</h3>
+
+<p>My name is Jeff Trawick and I am a software developer located in
+Raleigh, North Carolina.  I believe that the application of
+relatively simple technology and open software culture can
+improve the effectiveness of existing efforts on the part of educators,
+and that any such improvement is valuable to society.</p>
+
 <h3>Can I use this?</h3>
 
+<p>Yes, of course.  Download the software from 
+<a href="https://github.com/trawick/edurepo">https://github.com/trawick/edurepo</a>
+and deploy the software on your server, define your courses, load databases with
+resources applicable to your learning objectives, and so forth.</p>
 
+<h4>No, really...</h4>
 
+<p>Unfortunately, you're correct; it isn't feasible for most people to do that.  You need 
+someone else to maintain the computer resources that make it work, with
+minimal effort on your part.</p>
 
+<p>As long as your course is generally useful and you or someone else is
+willing to publish formal course descriptions and possibly additional materials
+for the learning objectives of the course, you will be able to use a publicly-accessible
+server for your class.</p>
+
+<p>If your course contains private materials or isn't generally useful to
+others, you'll need to run your own server or pay a vendor to provide that
+as a service.</p>
+
+<p>Most K-12 and college courses are examples of courses that will
+find a home in a freely available, publicly accessible server.</p>
+
+<p>Religious instruction courses and courses containing proprietary
+information are examples of courses that would require the use of a
+different server.</p>
+
+<h4>When can I get involved?</h4>
+
+<p>Feel free to contact me when it reaches a level of implementation
+that is useful to you.  Here's the current plan:</p>
+
+<h5>April 2014</h5>
+
+<ul>
+  <li>at least one commonly used K-12 course represented well enough
+in the system to be able to experiment with the entire system</li>
+</ul>
+
+<h5>May 2014</h5>
+
+<ul>
+  <li>dedicated servers for edjective.org</li>
+  <li>create one or more mailing lists to discuss different aspects of the
+system</li>
+</ul>
+
+<h5>June 2014</h5>
+
+<ul>
+  <li>end user software has enough working features for early adopters to
+commit to using the system in the upcoming school year</li>
+</ul>
+
+<h5>July 2014</h5>
+
+<ul>
+  <li>API documentation for other software authors/vendors to use</li>
+  <li>effort to convince authors of existing software, especially
+freely available software that many teachers use, to support retrieval
+of information from the system</li>
+</ul>
+
+<h5>August 2014</h5>
+
+<ul>
+  <li>at least four commonly used K-12 courses properly defined in the system</li>
+  <li>additional course definitions and related offerings, subject to ability
+of course sponsor to handle most of the work</li>
+  <li>operational capacity to support at least 50 individual course offerings
+(i.e., about 1500 students), with plans for scaling out to support more</li>
+</ul>
+
+<h3>I need a service level agreement, or at least to see it work reliably for a long time, 
+before committing to using this</h3>
+
+<p>It is no secret that web based software may not always support the number
+of people that want to use it.  Unfortunately, this is not an operation
+that can afford to make available limitless engineering or server resources to
+handle any possible demand.  We will have to grow with demand and with the ability
+to pay for resources.</p>
+
+<p>Fortunately, a school system has the ability to provide dedicated servers for
+the use of their students, largely avoiding the unpredictable impact
+of the use of public systems by unknown numbers of students across the world.
+The school system can control the use of the servers (by limiting the number
+of classes) to match the server resources they are able to allocate to it.  Please
+contact me for more information about this.</p>
+
+<p>Over time the public server will evolve to predictably, reliably support a
+very large number of users.</p>
 
 <h3>What happens if Jeff quits working on this?</h3>
 
+<p>The software and educational materials are and will be freely licensed.
+The educational materials will be stored in machine readable format even
+without using this particular software.</p>
 
+<p>In order to ensure that this project can survive independent of any particular
+individuals, I will promote the following:</p>
 
-
+<ul>
+   <li>The software components should be maintained as a largely independent
+project which is part of an existing non-profit organization with the cultural, technical,
+legal, and financial ability to support ongoing development and maintenance by
+interested parties.  (<em>something like the Apache Software Foundation</em>)</li>
+   <li>The educational materials themselves should be maintained separately by
+a new or existing non-profit organization that can provide the appropriate culture
+and other resources.  This same organization should operate the definitive
+servers which make the materials readily accessible to as many people as possible.
+  (<em>something like the Wikimedia Foundation</em>)</li>
+   <li>Even though it is crucial to provide the core services without cost to
+anyone who can make use of it, the ability of individuals and vendors to profit from
+involvement in the ecosystem should be respected, with the profit incentive seen 
+as an important aspect of long term survival.</li>
+</ul>
 
 <h3>Money and resources</h3>
 
-
-<h4>How does this directly help me make money?</h4>
-
-
 <h4>Who is paying for this work?</h4>
 
+<p>Over the coming months, a small number of educators who hope to use the
+system will work on educational materials, either as volunteers or as part 
+of their jobs or course work.</p>
 
+<p>Software development is currently unfunded, and likely to be impacted
+by other limits on my time.  I am working on this on a 100% volunteer basis.</p>
 
 <h4>How can I help?</h4>
 
+<ul>
+  <li>Sponsor educators who are volunteering their time to define courses
+and provide materials for the system.</li>
+  <li>Sponsor me or other software developers.</li>
+  <li>Starting in May 2014: Volunteer to help with course definitions,
+provide educational materials, or work on the software.</li>
+</ul>
+
+<h3>How can I contact you?</h3>
+
+<code>trawick@gmail.com</code>
