--- a/src/webapp/pages/qanda.html
+++ b/src/webapp/pages/qanda.html
@@ -3,10 +3,11 @@
 <h3>Who are you, and why are you doing this?</h3>
 
 <p>My name is Jeff Trawick and I am a software developer located in
-Raleigh, North Carolina.  I believe that the application of
-relatively simple technology and open software culture can
-improve the effectiveness of existing efforts on the part of educators,
-and that any such improvement is valuable to society.</p>
+Raleigh, North Carolina.  I believe that this application of
+relatively common technology and the infusion of open software, open
+information culture can greatly improve the effectiveness of 
+some existing efforts by many educators to develop and share
+course-related information.</p>
 
 <h3>Can I use this?</h3>
 
@@ -34,8 +35,9 @@ as a service.</p>
 find a home in a freely available, publicly accessible server.</p>
 
 <p>Religious instruction courses and courses containing proprietary
-information are examples of courses that would require the use of a
-different server.</p>
+information are but two examples of courses that would require the use of a
+privately funded server.  (But the software itself is freely available for any
+purpose.)</p>
 
 <h4>When can I get involved?</h4>
 
@@ -60,7 +62,8 @@ system</li>
 <h5>June 2014</h5>
 
 <ul>
-  <li>end user software has enough working features for early adopters to
+  <li>end user software has enough working features for a handful of
+early adopters to
 commit to using the system in the upcoming school year</li>
 </ul>
 
@@ -83,30 +86,31 @@ of course sponsor to handle most of the work</li>
 (i.e., about 1500 students), with plans for scaling out to support more</li>
 </ul>
 
-<h3>I need a service level agreement, or at least to see it work reliably for a long time, 
-before committing to using this</h3>
+<h3>What is your Service Level Agreement?  How do I know the servers will handle
+the load?</h3>
 
-<p>It is no secret that web based software may not always support the number
+<p>It is no secret that web based software does not always support the number
 of people that want to use it.  Unfortunately, this is not an operation
 that can afford to make available limitless engineering or server resources to
 handle any possible demand.  We will have to grow with demand and with the ability
 to pay for resources.</p>
 
-<p>Fortunately, a school system has the ability to provide dedicated servers for
+<p>A school system can mitigate this by setting up dedicated servers for
 the use of their students, largely avoiding the unpredictable impact
 of the use of public systems by unknown numbers of students across the world.
-The school system can control the use of the servers (by limiting the number
-of classes) to match the server resources they are able to allocate to it.  Please
-contact me for more information about this.</p>
+The school system can control the use of its servers by limiting the number
+of classes using it to match the server resources they are able to allocate to
+it.</p>
 
 <p>Over time the public server will evolve to predictably, reliably support a
-very large number of users.</p>
+very large number of users, just like other resources we use daily on the
+internet.</p>
 
 <h3>What happens if Jeff quits working on this?</h3>
 
 <p>The software and educational materials are and will be freely licensed.
-The educational materials will be stored in machine readable format even
-without using this particular software.</p>
+The educational materials will be stored in machine readable format suitable
+for use even without using the software developed for this project.</p>
 
 <p>In order to ensure that this project can survive independent of any particular
 individuals, I will promote the following:</p>
@@ -118,13 +122,17 @@ legal, and financial ability to support ongoing development and maintenance by
 interested parties.  (<em>something like the Apache Software Foundation</em>)</li>
    <li>The educational materials themselves should be maintained separately by
 a new or existing non-profit organization that can provide the appropriate culture
-and other resources.  This same organization should operate the definitive
-servers which make the materials readily accessible to as many people as possible.
+and other resources suitable for the type of material and the community which authors
+it, which is very different than an open source software community.  This same
+organization should operate the definitive servers which make the materials freely
+accessible to as many people as possible.
   (<em>something like the Wikimedia Foundation</em>)</li>
    <li>Even though it is crucial to provide the core services without cost to
-anyone who can make use of it, the ability of individuals and vendors to profit from
-involvement in the ecosystem should be respected, with the profit incentive seen 
-as an important aspect of long term survival.</li>
+anyone, the ability of individuals and vendors to profit from
+involvement in the ecosystem should be maintained; this provides a powerful
+incentive to contribute
+directly to the projects as well as to provide new types of end user software that can
+provide a better experience for teachers, parents, and students.</li>
 </ul>
 
 <h3>Money and resources</h3>
@@ -143,9 +151,9 @@ by other limits on my time.  I am working on this on a 100% volunteer basis.</p>
 <ul>
   <li>Sponsor educators who are volunteering their time to define courses
 and provide materials for the system.</li>
-  <li>Sponsor me or other software developers.</li>
-  <li>Starting in May 2014: Volunteer to help with course definitions,
-provide educational materials, or work on the software.</li>
+  <li>Sponsor me or other developers who are building the software.</li>
+  <li>Volunteers, refer to the rough schedule above for when different parts
+of the system will be available.</li>
 </ul>
 
 <h3>How can I contact you?</h3>
