add alt= to image to pass Chrome HTML validation (doesn't fix missing list of resources :) )

--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -14,7 +14,8 @@
 <body>
 
   <div id="folder-image">
-    <a href="#/"><img src="images/edjectives-folder-1-transparent-cropped-640px.png"></a>
+    <a href="#/"><img src="images/edjectives-folder-1-transparent-cropped-640px.png"
+                      alt="image of folder of educational objectives from around the world"></a>
   </div>
 
   <div data-ng-view=""></div>
