--- a/src/webapp/pages/currentObjectives.html
+++ b/src/webapp/pages/currentObjectives.html
@@ -33,7 +33,11 @@ of the classes which appears.</p>
 
             <ul>
               <li data-ng-repeat="res in obj.resources">
-                {{res.url}}
+                <a href="{{res.url}}">{{res.url}}</a>
+                <br />
+                Votes: {{res.votes}}
+                <br />
+                Comments from submitter: {{res.notes}}
               </li>
             </ul>
           </li>
