learning objective demo: display any available glossary items

--- a/src/webapp/pages/currentObjectives.html
+++ b/src/webapp/pages/currentObjectives.html
@@ -40,6 +40,12 @@ of the classes which appears.</p>
                 Comments from submitter: {{res.notes}}
               </li>
             </ul>
+
+            <ul>
+              <li data-ng-repeat="glossitem in obj.glossitems">
+                {{glossitem.term}}: {{glossitem.definition}}
+              </li>
+            </ul>
           </li>
         </ul>
       </li>
