quick and dirty cleanups

--- a/src/webapp/pages/forAuthors.html
+++ b/src/webapp/pages/forAuthors.html
@@ -21,4 +21,7 @@
   able to reuse it in a variety of software.</li>
   <li>The material must be freely available under common terms, 
   similar to material in Wikipedia.</li>
+  <li>Not all materials are of a form suitable for inclusion in the
+  repository, but the index to outside resources can be used to relate
+  the materials to specific objectives.</li>
 </ul>
