--- a/src/webapp/pages/forTeachers.html
+++ b/src/webapp/pages/forTeachers.html
@@ -1,19 +1,18 @@
-<h2>Teachers, here are the big ideas for you:</h2>
+<h2>Teachers...</h2>
 
-<h3>Sharing of materials in a machine readable format, with simple terms</h3>
+<p>In order for you and your student families to make best use of
+the system, we need you to maintain a calendar showing the current
+learning objective(s) for your classes which participate in the
+project.  Easy to use software will make this quick, and in a short
+time you can lay out projected progress over the coming days or
+weeks and easily adjust it later.</p>
 
-<p>Sharing of materials is not new at all, but materials have to be consumed in some manner (word processor documents for handouts, flash card software, etc.), and typically the materials are tied to particular software (or maybe even none at all).</p>
+<p>You and your student families will be able to use different 
+software to access materials relevant to the current learning
+objectives.</p>
 
-<h3>Variety of software that can consume the materials</h3>
+<p>You are also <a href="#/forAuthors">authors of materials</a>.</p>
 
-<p>This is mostly in the future, but here are the plans for some of the first software that can access the materials:</p>
+<p>If you are teaching a course which is not yet defined in the
+system, you and your colleagues can collaborate on defining it.</p>
 
-<ul>
-	<li>Access by parents to materials related directly to what you are working on that day</li>
-	<li>Worksheet/test generation for teachers</li>
-	<li>Flashcards and other activities for students</li>
-</ul>
-
-<h3>EASY enablement of all of this via identification of the relevant learning objectives</h3>
-
-...
