--- a/src/webapp/pages/forVendors.html
+++ b/src/webapp/pages/forVendors.html
@@ -1,4 +1,4 @@
-<p>Software vendors:</p>
+<p>Educational software vendors:</p>
 
 <ul>
   <li>The repository is the means to share data and make it machine
@@ -12,7 +12,7 @@
   or situations for learning.</li>
 </ul>
 
-<p>Education vendors:</p>
+<p>Textbook publishers and other vendors of educational materials:</p>
 
 <ul>
   <li>There's plenty of room for commercial involvement, centrally or at the margins.</li>
