--- a/src/webapp/pages/keyIdeas.html
+++ b/src/webapp/pages/keyIdeas.html
@@ -1,61 +1,62 @@
-<h3>The learning objectives from the course curriculum are the focus of communication
-and automation.</h3>
-
-<h4>Support for a course offering starts with a definition of the curriculum, made up
-of a series of learning objectives.</h4>
-
-<p>The curriculum for a course and each learning objective has a unique identifier.</p>
-
-<h4>Support materials are all accessible by learning objective.</h4>
-
-<p>A teacher, student, or parent who has the identifier for a learning
-objective access resources of many different types which are pertinent
-to that objective.</p>
-
-<p>A teacher who uses software to maintain the current learning objectives
-for each class (a simple type of calendar) enables parents to quickly
-access resources specific to the work their child is studying right now
-at school.</p>
-
-<p>In short, communication of the identifier for the learning objective 
-avoids confused parent-student discussions about what the student did
-in a class, as well as streamlines access to related resources.</p>
-
-<h3>A shared repository for learning materials, accessible by learning
-objective, supports free access and collaboration.</h3>
-
-<p>A simple way to think of this is as a WikipediA for educational materials,
-where anyone can contribute additions or improvements, and anyone can access
-the materials.</p>
-
-<p>Accessibility by learning objective allows teachers, students, and
-parents to quickly find relevant resources.</p>
-
-<p>Existing materials can be added to the repository if they are
-contributed by the owners of the material and they can be associated with
-existing learning objectives.</p>
-
-<p>Educators creating new materials to share can rely on the shared
-repository to maintain them and allow them to reach a large audience.</p>
-
-<h3>The resources in the repository are machine readable with open, online access
-from any client software.</h3>
-
-<p>The mechanisms for accessing the resources will be documented so that
-software authors and vendors can support reuse of the information.</p>
-
-<p>The types of software that may reuse the resources are essentially
-unlimited.  Consider a few examples:</p>
+<h2>Background</h2>
 
 <ul>
-  <li>Flashcards and games</li>
-  <li>Quiz and test generators</li>
-  <li>Crowd-sourced indexes of relevant resources</li>
+  <li>Your student's 5th period math class, for example, follows a <em>course curriculum</em>.</li>
+  <li>The <em>course curriculum</em> consists primarily of specific <em>learning objectives</em>
+to be achieved in the course.</li>
+  <li>Teachers, students, and parents use many types of educational resources &mdash; text, videos,
+worksheets, games, etc. &mdash; in the
+context of a specific <em>learning objective</em>.</li>
 </ul>
 
-<p>Software for smartphones, tablets, web sites, computers, game systems,
+<h2>Existing problems to be addressed</h2>
+
+<ol>
+  <li>a huge amount duplicate effort on the part of teachers preparing materials or adjusting them
+(even <em>cutting and pasting</em>) to consume in software</li>
+  <li>difficulties for parents to understand current objectives, often making it impractical
+for parents to follow the progress of classes on a regular basis</li>
+  <li>ineffective systems created by states and private groups to index available materials,
+which do not allow direct access to materials which are relevant to current study</li>
+</ol>
+
+<h2>Key ideas of the project</h2>
+
+<ol>
+  <li>The current learning objectives for a class are easily communicated by the teacher
+to students and parents.</li>
+  <li>The system provides a repository for various types of educational materials, all
+supporting targeted access by learning objective.  <em>A very important type of material
+is the course curriculum itself.</em>  Teachers will be able to use the repository to
+collaborate on and reuse materials without the burden of self publishing.</li>
+  <li>Users of the system will be able to promote outside resources which apply to
+specific learning objectives.</li>
+  <li>All materials in the system are freely available by end users and, more importantly,
+by end user software.</li>
+</ol>
+
+<h2>Key objectives of the project</h2>
+
+<ol>
+  <li>Relating all materials to specific learning objectives will allow teachers, students,
+and parents to quickly find appropriate materials.  <em>For parents specifically, it will
+become much more easy to track exactly what their children are currently working on, and
+quickly find information to help them with their homework.</em></li>
+  <li>Teachers will have a much easier means to communicate general class activity to parents.</li>
+  <li>The open access of the system will support a rich ecosystem with incentives to educators
+of collaborate on materials and incentives to software developers to offer creative ways
+to use them.</li>
+</ol>
+
+<h2>In short</h2>
+
+<ul>
+  <li>Software for smartphones, tablets, web sites, computers, game systems,
 and specialty devices will make relevant educational materials ubiquitous.
 Whether a child studied the Pythagorean theorem, the Napoleonic Wars,
 or the conjugation of common French verbs at school today, it should not
 take more than a few taps on her parent's smartphone or computer to access
-relevant materials and start a conversation about it.</p>
+relevant materials and start a conversation about it.</li>
+  <li>Teachers who donate materials to the system will enable those materials
+to be consumed in unimaginable ways by students all over the world.</li>
+</ul>
